# renderer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  graphics.h  main.cpp
.helix/: config.toml  languages.toml
shaders/: fs.glsl  vs.glsl
src/: base.h  camera.cpp  camera.h  graphics.h  graphics_api.cpp  graphics_api.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  sim.cpp  sim.h  sim_state.h
